[gd_scene load_steps=2 format=3 uid="uid://bh1r17v6yhln8"]

[ext_resource type="Script" path="res://scripts/sign_jump.gd" id="1_g0s34"]

[node name="SignJump" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_g0s34")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
